--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "description": "",
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.18.1"
+    "mammoth": "^1.10.0",
+    "mongoose": "^8.18.1",
+    "multer": "^2.0.2",
+    "pdf-parse": "^1.1.1"
   }
 }
