connect to backend

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,14 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
+    "axios": "^1.12.2",
+    "dom": "^0.0.3",
     "lottie-react": "^2.4.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-router-dom": "^7.9.3",
     "remixicon": "^4.6.0",
+    "router": "^2.2.0",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
