--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-circular-progressbar": "^2.2.0",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.3",
+    "react-toastify": "^11.0.5",
     "remixicon": "^4.6.0",
     "router": "^2.2.0",
     "tailwindcss": "^4.1.13"
