Add Footer and About components

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.13",
     "axios": "^1.12.2",
     "dom": "^0.0.3",
+    "js-cookie": "^3.0.5",
     "lottie-react": "^2.4.1",
     "react": "^19.1.1",
     "react-circular-progressbar": "^2.2.0",
